Fixed navigation overflow

--- a/styles/component/controls.css
+++ b/styles/component/controls.css
@@ -14,9 +14,8 @@
 #controls {
     opacity: var(--opacitycontrols);
     transition: 2s;
-    position: absolute;
-    top: var(--controlstop);
-    left: -10px;
+    margin-top: var(--controlstop);
+    margin-left: -10px;
 }
 
 #controls:hover {
@@ -56,7 +55,6 @@
     opacity: var(--controlssubop);
     margin-left: var(--controlssubmargin);
     transition: 2s;
-    display: grid;
 }
 
 #controls:hover ol.sub-controls.active {
